--- a/ShortCodeTest/Info.plist
+++ b/ShortCodeTest/Info.plist
@@ -12,6 +12,16 @@
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>http://www.filltext.com/?rows=100&amp;fname=%7BfirstName%7D&amp;lname=%7BlastName%7D&amp;city=%7Bcity%7D&amp;pretty=true</key>
+			<string></string>
+		</dict>
+	</dict>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
